--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
   <body>
-    <section>
+    <header class="container">
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container">
               <a class="navbar-brand" 
@@ -31,7 +31,190 @@
               </div>
             </div>
           </nav>
-    </section>
+          <!-- slider start -->
+          <section class="mt-5">
+            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active bg-secondary border rounded bg-success text-white">
+                    <div class="row">
+                        <div class="col-lg-7 d-flex align-items-center ps-5">
+                            <div>
+                                <h1>Cool Dude Headphone</h1>
+                            <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
+                            <h1>$420</h1>
+                            <div class="btn btn-warning">Buy Now</div>
+                            </div>
+                        </div>
+                        <div class="col-lg-5">
+                            <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                  </div>
+                  <div class="carousel-item active bg-secondary border rounded bg-success text-white">
+                    <div class="row">
+                        <div class="col-lg-7 d-flex align-items-center ps-5">
+                            <div>
+                                <h1>X-Box for your living room</h1>
+                            <p>This is the best x-box in the world for people who just want to waste time in front of fake sports</p>
+                            <h1>$600</h1>
+                            <div class="btn btn-warning">Buy Now</div>
+                            </div>
+                        </div>
+                        <div class="col-lg-5">
+                            <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                  </div>
+                  <div class="carousel-item active bg-secondary border rounded bg-success text-white">
+                    <div class="row">
+                        <div class="col-lg-7 d-flex align-items-center ps-5">
+                            <div>
+                                <h1>Mega LCD TV For Sports</h1>
+                            <p>This is the best tv in the world for people who just want to waste time in front of tv.</p>
+                            <h1>$1200</h1>
+                            <div class="btn btn-warning">Buy Now</div>
+                            </div>
+                        </div>
+                        <div class="col-lg-5">
+                            <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                  </div>
+                  
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+            </section>
+          <!-- slider end -->
+        </header>
+        <main>
+            <!-- categories start -->
+            <section>
+                <div class="container overflow-hidden text-center my-5">
+                    <div class="row gy-5">
+                        
+                      <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="p-3 border bg-warning d-flex align-items-center justify-content-around border rounded ">
+                            <h1>Watch</h1>
+                            <img src="images/categories/watch.png" alt="">
+                        </div>
+                      </div>
+                      <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="p-3 border bg-info d-flex align-items-center justify-content-around border rounded">
+                            <h1>Bag</h1>
+                            <img src="images/categories/bag.png" alt="">
+                        </div>
+                      </div>
+                      <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="p-3 border bg-primary d-flex align-items-center justify-content-around border rounded">
+                            <h1>Shoes</h1>
+                            <img src="images/categories/shoes.png" alt="">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+            </section>
+            <!-- categories end  -->
+            <!-- shoes section start  -->
+            <section class="container my-5">
+                <h1>Shoes</h1>
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                    <div class="col">
+                      <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Supply 350</h5>
+                          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+                          <h1>$120</h1>
+                        </div>
+                        <div class="m-5 d-flex justify-content-center">
+                          <div class="btn btn-danger">Buy Now</div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Nike 360</h5>
+                          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                        </div>
+                        <h1>$130</h1>
+                        <div class="m-5 d-flex justify-content-center">
+                            <div class="btn btn-danger">Buy Now</div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Red Airmax</h5>
+                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional.</p>
+                          <h1>$140</h1>
+                        </div>
+                        <div class="m-5 d-flex justify-content-center">
+                            <div class="btn btn-danger">Buy Now</div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+            </section>
+            <!-- shoes section end  -->
+            <!-- backpack section start  -->
+            <section class="container my-5">
+                <h1>Backpack</h1>
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                    <div class="col">
+                      <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Red Laltu Bag</h5>
+                          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+                          <h1>$120</h1>
+                        </div>
+                        <div class="m-5 d-flex justify-content-center">
+                          <div class="btn btn-danger">Buy Now</div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Blue Niltu Bag</h5>
+                          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                        </div>
+                        <h1>$130</h1>
+                        <div class="m-5 d-flex justify-content-center">
+                            <div class="btn btn-danger">Buy Now</div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card border border-0 shadow-lg h-100">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Black Kaltu Bag</h5>
+                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional.</p>
+                          <h1>$140</h1>
+                        </div>
+                        <div class="m-5 d-flex justify-content-center">
+                            <div class="btn btn-danger">Buy Now</div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+            </section>
+            <!-- backpack section end  -->
+        </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
 </html>
