--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="container">
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg fixed-top bg-light">
             <div class="container">
               <a class="navbar-brand" 
               href="#"><img src="images/logo.png" alt=""></a>
@@ -21,11 +21,11 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Shoes</a>
+                    <a class="nav-link" aria-current="page" href="#shoes">Shoes</a>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Backpack</a>
+                    <a class="nav-link" aria-current="page" href="#backpack">Backpack</a>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Subscribe</a>
+                    <a class="nav-link" href="#subscribe">Subscribe</a>
                 </ul>
             
               </div>
@@ -97,7 +97,7 @@
         <main>
             <!-- categories start -->
             <section>
-                <div class="container overflow-hidden text-center my-5">
+                <div class="container overflow-hidden text-center my-5" id="shoes">
                     <div class="row gy-5">
                         
                       <div class="col-lg-4 col-md-6 col-sm-12">
@@ -169,7 +169,7 @@
             </section>
             <!-- shoes section end  -->
             <!-- backpack section start  -->
-            <section class="container my-5">
+            <section class="container my-5" id="backpack">
                 <h1>Backpack</h1>
                 <div class="row row-cols-1 row-cols-md-3 g-4">
                     <div class="col">
@@ -214,6 +214,27 @@
                   </div>
             </section>
             <!-- backpack section end  -->
+            <!-- subscribe start  -->
+            <section style="height: 300px;" class="container rounded-3 d-flex justify-content-center align-items-center bg-success" id="subscribe">
+                <div>
+                    <h2>LET'S STAY IN TOUCH</h2>
+                <p>Get updates on sales, specials and more</p>
+                <div class="row g-3 align-items-center">
+                    <div class="col-auto">
+                      <label for="inputPassword6" class="col-form-label"></label>
+                    </div>
+                    <div class="col-12">
+                      <input type="password" id="inputPassword6" class="form-control" aria-describedby="passwordHelpInline">
+                    </div>
+                    <button type="submit" class="btn btn-primary bg-info ">Submit</button>
+                  </div>
+                </div>
+            </section>
+            <footer class="d-flex justify-content-evenly">
+                <p>
+                    <small>©2022. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small>
+                </p>
+            </footer>
         </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
